Self/mydevorg/Unpackaged/Config/objects/Avon_Genealogy__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <externalId>true</externalId>
        <label>Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <label>Contact Key</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Philippines Genealogy</relationshipLabel>
        <relationshipName>Philippines_Genealogy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXEC_GEN_CNT__c</fullName>
        <label>Count of Upline Executive Generations</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_GEN_INDX__c</fullName>
        <label>Executive Generation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_RSNG_STR_IND__c</fullName>
        <label>Executive Rising Star Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genealogy_Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>MRKT_CMPGN_ACCT_GEN_KEY</inlineHelpText>
        <label>Genealogy Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LFT_ND_ID__c</fullName>
        <label>Left Node Id</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Left_Value__c</fullName>
        <label>Left Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>The level of the current node in the tree.</description>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_ID__c</fullName>
        <label>Market ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Leadership_Summary_key__c</fullName>
        <label>NC_Leadership_SUmmary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Personal_Performance_Key__c</fullName>
        <label>NC_Personal_Performance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RGT_ND_ID__c</fullName>
        <label>Right Node Id</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROOT_UPLN_ACC_NR__c</fullName>
        <label>Root Upline Acc No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_IND__c</fullName>
        <label>Rising Star Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_Value__c</fullName>
        <label>Right Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Main_Picklist__c</fullName>
        <label>Test Main Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Sub_Picklist__c</fullName>
        <label>Test Sub Picklist</label>
        <picklist>
            <controllingField>Test_Main_Picklist__c</controllingField>
            <picklistValues>
                <fullName>Value 1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 1.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 1.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value 4.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UPLN_ACCT_NR__c</fullName>
        <externalId>true</externalId>
        <label>Upline Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPLN_GEN_INDX__c</fullName>
        <label>Upline Generation</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upline_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upline Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Genealogy (Upline Contact)</relationshipLabel>
        <relationshipName>Genealogy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Avon Genealogy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCT_NR__c</columns>
        <columns>Contact_Key__c</columns>
        <columns>UPLN_GEN_INDX__c</columns>
        <columns>ROOT_UPLN_ACC_NR__c</columns>
        <columns>EXEC_GEN_CNT__c</columns>
        <columns>Upline_Contact__c</columns>
        <columns>LFT_ND_ID__c</columns>
        <columns>RGT_ND_ID__c</columns>
        <columns>Number_of_Children__c</columns>
        <columns>Level__c</columns>
        <columns>Genealogy_Key__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Avon Genealogy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genealogy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>